change target to blank for social links

--- a/themes/hugo-identity-theme/layouts/index.html
+++ b/themes/hugo-identity-theme/layouts/index.html
@@ -54,7 +54,7 @@
 						<footer>
 							<ul class="icons">
 								{{ range .Site.Params.social }}
-									<li><a href="{{ .link }}" class="{{ .icon }}">{{ .title }}</a></li>
+									<li><a href="{{ .link }}" target="_blank" class="{{ .icon }}">{{ .title }}</a></li>
 								{{ end }}
 							</ul>
 						</footer>
